# Slicer-Featurelet-Registration

./: CMakeLists.txt
FeatureletRegistration/: CMakeLists.txt  qSlicerFeatureletRegistrationModule.cxx  qSlicerFeatureletRegistrationModule.h  qSlicerFeatureletRegistrationModuleWidget.cxx  qSlicerFeatureletRegistrationModuleWidget.h
FeatureletRegistration/Logic/: DeformationFieldGenerator.h  vtkSlicerFeatureletRegistrationLogic.cxx  vtkSlicerFeatureletRegistrationLogic.h
FeatureletRegistration/MRML/: vtkMRMLFeatureletRegistrationNode.cxx  vtkMRMLFeatureletRegistrationNode.h
Featurelets-Registration/: CTestTestfile.cmake  Makefile  cmake_install.cmake  moc_qSlicerRegistrationModule.cxx  moc_qSlicerRegistrationModule.cxx_parameters  moc_qSlicerRegistrationModuleWidget.cxx  moc_qSlicerRegistrationModuleWidget.cxx_parameters  qSlicerRegistrationModule.cxx  qSlicerRegistrationModuleGenericTest.cxx  qSlicerRegistrationModuleWidgetGenericTest.cxx  ui_qSlicerRegistrationModuleWidget.h
Featurelets-Registration/Logic/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_vtkSlicerRegistrationModuleLogic_python_scripts.cmake  vtkSlicerRegistrationModuleLogicExport.h  (+3 more)
Slicer-Featurelets-build/: AdditionalLauncherSettings-configure.cmake  AdditionalLauncherSettings.ini  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Slicer-Featurelets-test-command-args.cmake  Slicer-Featurelets-upload-command-args.cmake  cmake_install.cmake  install_manifest.txt  midas_api_upload_extension-command-args.cmake
(+52 files in other folders)
